--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
 	<div class="container">
 		<div class="box">
 			<h2>To-Do List</h2>
-			<a href="to-do_list/index.html">Link</a>
+			<a href="to-do_list/index.html">X</a>
 		</div>
 		<div class="box">
 			<h2>Number Guessing Game</h2>
-			<a href="random_number_gessing_game/index.html">Link</a>
+			<a href="random_number_guessing_game/index.html">X</a>
 		</div>
         <div class="box">
-            <h2>Hello World!</h2>
-			<a href="#">This is a link!</a>
+            <h2>Word Guessing Game</h2>
+			<a href="word_game/index.html">Link</a>
         </div>
         <div class="box">
             <h2>Hello World!</h2>
