--- a/index.html
+++ b/index.html
@@ -94,11 +94,7 @@
 		</div>
         <div class="box">
             <h2>Word Guessing Game</h2>
-			<a href="word_game/index.html">Link</a>
-        </div>
-        <div class="box">
-            <h2>Hello World!</h2>
-			<a href="#">This is a link!</a>
+			<a href="word_game/index.html">X</a>
         </div>
 	</div>
 	<div class="disclaimer">
