--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
             <h2>Word Guessing Game</h2>
 			<a href="word_game/index.html">X</a>
         </div>
+		<div class="box">
+            <h2>Clicker Game</h2>
+			<a href="clicker/clicker.html">X</a>
+        </div>
 	</div>
 	<div class="disclaimer">
 		<p>Disclaimer: All content on this page and the linked pages has been generated with AI.</p>
